# stt_pipline_shakhzod

./: .gitignore  README.md  pyproject.toml
scripts/: materialize_vad_segments.py  run_audio_quality.py  run_music_detection.py  run_overlap.py  run_select_ssl.py  run_split_labeled.py  run_vad_unlabeled.py
src/data/: audio_quality.py  jsonl.py  labeled_split.py  manifest.py  materialize.py  music_detection.py  overlap.py  runtime.py  selection.py  ssl_selection.py  text_normalization.py  vad.py
tests/: test_audio_quality.py  test_materialize.py  test_music_detection.py  test_overlap.py  test_selection.py  test_text_normalization.py  test_vad.py
