[project]
name = "stt-pipeline-shakhzod"
version = "0.1.0"
description = "Reproducible data preparation and training pipeline for speech recognition"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "datasets[audio]>=3.6,<4.0",
    "huggingface-hub>=0.30,<1.0",
    "numpy>=1.26,<3.0",
    "silero-vad>=5.1,<7.0",
    "soundfile>=0.13,<1.0",
    "soxr>=0.5,<2.0",
    "torch>=2.5",
    "torchcodec>=0.4",
    "tqdm>=4.67,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.11,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
